# PuzzleSolver

./: .gitignore  404.html  CVRP.ipynb  ConstraintOpt.ipynb  ConstraintOpt.md  IntegerOpt.ipynb  JobShopPro.ipynb  KnapsackPro.ipynb  LICENSE  MANIFEST.in  ORtools.md  Puzzles.ipynb  README.CN.md  README.md  SimpleLP.ipynb  TSP.ipynb  UnitCmtProblem.ipynb  VRPPD.ipynb  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
Analytics/: Puzzle_analytics.ipynb
Crawlers/: ABCEndViewCopy.py  ABCEndViewCrawler.py  AkariCrawler.py  BalanceLoopCrawler.py  BattleshipCrawler.py  BinairoCrawler.py  ButterflySudokuCrawler.py  Clueless1SudokuCrawler.py  Clueless2SudokuCrawler.py  Config.py  ConsecutiveSudokuCrawler.py  CorralCrawler.py  CountryRoadCrawler.py  CrawlerFactory.py  CreekCrawler.py  DetourCrawler.py  DoubleBackCrawler.py  EntryExitCrawler.py  EuleroCrawler.py  FillominoCrawler.py  FoseruzuCrawler.py  FuzuliCrawler.py  GappyCrawler.ipynb  Gattai8SudokuCrawler.py  GokigenNanameCrawler.py  GrandTourCrawler.py  GridCrawler.py  HakyuuCrawler.py  HeyawakeCrawler.py  JigsawSudokuCrawler.py  JuosanCrawler.py  KakkuruCrawler.py  KakurasuCrawler.py  KakuroCrawler.py  KillerSudokuCrawler.py  KuromasuCrawler.py  KuroshutoCrawler.py  LinesweeperCrawler.py  MagneticCrawler.py  MakaroCrawler.py  (+40 more)
Docs/: Binairo.md  Buraitoraito.md  Eulero.md
ORMaterials/: IntegerOpt.ipynb  KnapsackPro.ipynb  NetworkFlow.ipynb  SimpleLP.ipynb  TSP.ipynb
Puzzles/: ABCEndViewSolver.py  Akari.ipynb  AkariSolver.py  Alphabetoku.ipynb  Aquarium.ipynb  BalanceLoopSolver.py  Binairo.ipynb  BinairoSolver.py  Binario.ipynb  BosanowaSolver.py  Buraitoraito.ipynb  BuraitoraitoSolver.py  ButterflySudokuSolver.py  Clueless1SudokuSolver.py  Clueless2SudokuSolver.py  CountryRoadSolver.py  Creek.ipynb  Cryptarithmetic.ipynb  DetourSolver.py  Dominos.ipynb  DominosSolver.py  DoubleBackSolver.py  DoubleMinesweeper.ipynb  EntryExitSolver.py  Eulero.ipynb  EuleroSolver.py  EvenOddSudokuSolver.py  Fillomino.ipynb  FiveCells.ipynb  Fobidoshi.ipynb  FobidoshiSolver.py  FuzuliSolver.py  Gappy.ipynb  GappySolver.py  Gattai8SudokuSolver.py  GokigenNaname.ipynb  GrandTour.ipynb  GrandTourSolver.py  Hakyuu.ipynb  HakyuuSolver.py  (+78 more)
Utils/: Count.py  (+42 more)
(+22257 files in other folders)
