[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzlekit"
version = "0.1.0"
description = "Solvers for logic puzzles with ortools. e.g. Nonogram, Slitherlink, Fillomino, Creek, Akari, Yajilin and Sudoku-variants."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "SmilingWayne", email = "xiaoxiaowayne@gmail.com"}]
license = {text = "MIT"}

dependencies = [
    "numpy",
    "ortools>=9.6",
    "matplotlib", 
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["puzzlekit*"]

[project.urls]
Homepage = "https://github.com/SmilingWayne/PuzzleSolver"